--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,8 +52,8 @@ hr {
 
     &:focus {
       border: $border;
-      background-color: $accent-color;
-      color: $white;
+      background-color: $primary-color;
+      color: $accent-color;
     }
   }
 
